# detector-calibration

./: .gitignore  CMakeLists.txt  CalibrationCalculator.cpp  CalibrationCalculator.h  H5Reader.h  README.md  conanfile.txt  main.cpp
instrument/: CMakeLists.txt
instrument/loki/: CMakeLists.txt  README.md
instrument/loki/h5scripts/: README.md  StrawPos.ipynb  amplitudes.py  strawpos.py
instrument/loki/maskcalibration/: CMakeLists.txt  CalibrationCalculator.h
src/: CMakeLists.txt
src/loki/: CMakeLists.txt  CalibrationCalculator.cpp  CalibrationCalculator.h  main.cpp
test/: CalibrationCalculatorTest.cpp
